# elpx-translator-desktop.github.io

./: .gitignore  LICENSE  README.md  RELEASING.md  index.html  pyproject.toml
.github/workflows/: build-desktop.yml
app/: app.css  app.js  index.html
docs/: analytics.js  site.css  site.js
packaging/linux/: build-appimage.sh  build-deb.sh  build-linux-artifacts.sh  common.sh  elpx-translator-desktop.desktop
packaging/windows/: installer.iss
src/elpx_translator_desktop/: __init__.py  app.py  config.py  elpx_service.py  progress.py  remote_provider.py  text_utils.py  translator_engine.py  ui_i18n.py  update_checker.py
tests/: test_app_import.py  test_config.py  test_elpx_service.py  test_remote_provider.py  test_translator_engine.py  test_update_checker.py
