[build-system]
requires = ['setuptools>=68']
build-backend = 'setuptools.build_meta'

[project]
name = 'elpx-translator-desktop'
version = '0.1.0'
description = 'Aplicacion de escritorio para traducir archivos .elpx localmente'
readme = 'README.md'
requires-python = '>=3.11'
dependencies = [
    'beautifulsoup4>=4.12',
    'ctranslate2>=4.5',
    'huggingface_hub>=0.30',
    'platformdirs>=4.2',
    'PySide6>=6.8',
    'sentencepiece>=0.2',
    'transformers>=4.49',
]

[project.optional-dependencies]
build = [
    'pyinstaller>=6.15',
]

[project.scripts]
elpx-translator-desktop = 'elpx_translator_desktop.app:main'

[tool.setuptools]
package-dir = {'' = 'src'}

[tool.setuptools.packages.find]
where = ['src']
