[build-system]
requires = ['setuptools>=68']
build-backend = 'setuptools.build_meta'

[project]
name = 'elpx-translator-desktop'
version = '0.1.7b4'
description = 'Aplicacion de escritorio para traducir archivos .elpx en local o con tu propia API'
readme = 'README.md'
requires-python = '>=3.11'
license = {text = 'AGPL-3.0-or-later'}
authors = [
    {name = 'Juan José de Haro'},
]
dependencies = [
    'beautifulsoup4>=4.12',
    'ctranslate2>=4.5',
    'huggingface_hub>=0.30',
    'platformdirs>=4.2',
    'PySide6>=6.8',
    'sentencepiece>=0.2',
    'transformers>=4.49',
]

[project.optional-dependencies]
build = [
    'pyinstaller>=6.15',
]

[project.scripts]
elpx-translator-desktop = 'elpx_translator_desktop.app:main'

[project.urls]
Homepage = 'https://github.com/elpx-translator-desktop/elpx-translator-desktop.github.io'
Repository = 'https://github.com/elpx-translator-desktop/elpx-translator-desktop.github.io'
Releases = 'https://github.com/elpx-translator-desktop/elpx-translator-desktop.github.io/releases'

[tool.setuptools]
package-dir = {'' = 'src'}

[tool.setuptools.package-data]
elpx_translator_desktop = ['assets/*.svg']

[tool.setuptools.packages.find]
where = ['src']
